@@ -27,11 +27,22 @@ import java.util.concurrent.LinkedBlockingQueue;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-
 /**
  * This RequestProcessor logs requests to disk. It batches the requests to do
  * the io efficiently. The request is not passed to the next RequestProcessor
  * until its log has been synced to disk.
+ *
+ * SyncRequestProcessor is used in 3 different cases
+ * 1. Leader - Sync request to disk and forward it to AckRequestProcessor which
+ *             send ack back to itself.
+ * 2. Follower - Sync request to disk and forward request to
+ *             SendAckRequestProcessor which send the packets to leader.
+ *             SendAckRequestProcessor is flushable which allow us to force
+ *             push packets to leader.
+ * 3. Observer - Sync committed request to disk (received as INFORM packet).
+ *             It never send ack back to the leader, so the nextProcessor will
+ *             be null. This change the semantic of txnlog on the observer
+ *             since it only contains committed txns.
  */
 public class SyncRequestProcessor extends Thread implements RequestProcessor {
     private static final Logger LOG = LoggerFactory.getLogger(SyncRequestProcessor.class);
@@ -135,9 +146,11 @@ public class SyncRequestProcessor extends Thread implements RequestProcessor {
                         // iff this is a read, and there are no pending
                         // flushes (writes), then just pass this to the next
                         // processor
-                        nextProcessor.processRequest(si);
-                        if (nextProcessor instanceof Flushable) {
-                            ((Flushable)nextProcessor).flush();
+                        if (nextProcessor != null) {
+                            nextProcessor.processRequest(si);
+                            if (nextProcessor instanceof Flushable) {
+                                ((Flushable)nextProcessor).flush();
+                            }
                         }
                         continue;
                     }
@@ -164,9 +177,11 @@ public class SyncRequestProcessor extends Thread implements RequestProcessor {
         zks.getZKDatabase().commit();
         while (!toFlush.isEmpty()) {
             Request i = toFlush.remove();
-            nextProcessor.processRequest(i);
+            if (nextProcessor != null) {
+                nextProcessor.processRequest(i);
+            }
         }
-        if (nextProcessor instanceof Flushable) {
+        if (nextProcessor != null && nextProcessor instanceof Flushable) {
             ((Flushable)nextProcessor).flush();
         }
     }
@@ -181,7 +196,9 @@ public class SyncRequestProcessor extends Thread implements RequestProcessor {
         } catch(InterruptedException e) {
             LOG.warn("Interrupted while wating for " + this + " to finish");
         }
-        nextProcessor.shutdown();
+        if (nextProcessor != null) {
+            nextProcessor.shutdown();
+        }
     }
 
     public void processRequest(Request request) {
