@@ -38,6 +38,13 @@ public class ObserverZooKeeperServer extends LearnerZooKeeperServer {
     private static final Logger LOG =
         LoggerFactory.getLogger(ObserverZooKeeperServer.class);        
     
+    /**
+     * Enable since request processor for writing txnlog to disk and
+     * take periodic snapshot. Default is ON.
+     */
+    
+    private boolean syncRequestProcessorEnabled = this.self.getSyncEnabled();
+    
     /*
      * Request processors
      */
@@ -54,6 +61,7 @@ public class ObserverZooKeeperServer extends LearnerZooKeeperServer {
             DataTreeBuilder treeBuilder, ZKDatabase zkDb) throws IOException {
         super(logFactory, self.tickTime, self.minSessionTimeout,
                 self.maxSessionTimeout, treeBuilder, zkDb, self);
+        LOG.info("syncEnabled =" + syncRequestProcessorEnabled);
     }
     
     public Observer getObserver() {
@@ -74,6 +82,10 @@ public class ObserverZooKeeperServer extends LearnerZooKeeperServer {
      * @param request
      */
     public void commitRequest(Request request) {     
+        if (syncRequestProcessorEnabled) {
+            // Write to txnlog and take periodic snapshot
+            syncProcessor.processRequest(request);
+        }
         commitProcessor.commit(request);        
     }
     
@@ -92,11 +104,21 @@ public class ObserverZooKeeperServer extends LearnerZooKeeperServer {
         commitProcessor.start();
         firstProcessor = new ObserverRequestProcessor(this, commitProcessor);
         ((ObserverRequestProcessor) firstProcessor).start();
-        syncProcessor = new SyncRequestProcessor(this,
-                new SendAckRequestProcessor(getObserver()));
-        syncProcessor.start();
+
+        /*
+         * Observer should write to disk, so that the it won't request
+         * too old txn from the leader which may lead to getting an entire
+         * snapshot.
+         *
+         * However, this may degrade performance as it has to write to disk
+         * and do periodic snapshot which may double the memory requirements
+         */
+        if (syncRequestProcessorEnabled) {
+            syncProcessor = new SyncRequestProcessor(this, null);
+            syncProcessor.start();
+        }
     }
-    
+
     /*
      * Process a sync request
      */
